# API-automation-suite

./: .classpath  .env.example  .gitignore  .project  CLAUDE.md  README.md  langgraph.json  pom.xml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: qa-approve.md  qa-run.md  qa-start.md  ready-for-testing.md
.claude/prompts/: context-check.md  story-update.md  test-card.md  test-generation.md
docs/: QA_Automation_Final.pptx  application-analysis.md  demo-runbook.md  enterprise-qa-agent-platform.md  java-suite-history.md  jira-rest-client.md  mcp-setup.md
engine/: .env.example  README.md  langgraph.json  pyproject.toml
engine/scripts/: jira_smoke.py
engine/src/qa_agent/: graph.py
engine/src/qa_agent/generation/: __init__.py
engine/src/qa_agent/jira/: __init__.py  client.py  config.py  constants.py
engine/src/qa_agent/models/: __init__.py  azure_openai.py  router.py
engine/src/qa_agent/nodes/: generate.py  publish_results.py  story_update.py
engine/tests/: test_jira_rest_client.py  test_tenant_isolation.py
experiments/rovo-mcp/: FINDINGS.md  README.md  package.json  probe.mjs
qa_agent/: __init__.py  config.py  edges.py  graph.py  state.py  tenant.py
qa_agent/jira/: adf.py  client.py  rest_client.py
qa_agent/models/: __init__.py
qa_agent/nodes/: __init__.py  context_check.py  dispatch_execution.py  fetch.py  plan_gate.py
scripts/: azure_smoke.py  startup-sync-check.ps1  xray-auth.ps1  xray-import.ps1
src/test/resources/: allure.properties  junit-platform.properties
tests/: test_jira_rest_client.py  test_tenant_isolation.py
(+21 files in other folders)
