[project]
name = "qa-agent-engine"
version = "0.1.0"
description = "Enterprise QA Agent — central brain (Phase 1 scaffold). Model- & framework-agnostic; federated execution."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",   # stateful loop orchestration
    "httpx>=0.27",      # Jira REST (headless service-account path)
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_agent"]
